fix misalignment

--- a/client/templates/bill.import.less
+++ b/client/templates/bill.import.less
@@ -13,22 +13,25 @@
       padding: 10px;
       top: 47px;
       height: 132px;
-
+      z-index: 1000;
     }
     .order-detail {
       .order-image{
-        width: 100px;
+        width: 30%;
         height: 100px;
         display: block;
+        float: left;
+        margin: 0;
       }
       .cartDetail {
-        width: 255px;
+        width: 65%;
         height: 100px; 
         position: relative; 
+        float: right;
         .order-name{
           font-size: 17px;
           font-weight: 600;
-          width: 195px;
+          width: 80%;
           display: inline-block;
           float: left;
           white-space: nowrap;
@@ -38,7 +41,7 @@
         .order-price{
           color: #D83E14;
           font-size: 17px;
-          width: 50px;
+          width: 20%;
           display: inline-block;
           text-align: right;
         }
